--- a/templates/nutrition.html
+++ b/templates/nutrition.html
@@ -12,19 +12,19 @@
   <section class="hero-section set-bg" data-setbg="./static/images/food.jpg">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md">
               <div class="hero-image">
                 <div class="hero-text">
-                    <span>You are what you eat</span>
+                    <!-- <span>You are what you eat</span> -->
                     <!-- <h1>TODO: ADD NUTRITION SEARCH/LOOKUP</h1> -->
-                  </br></br>
+                  <!-- </br></br> -->
                     <div class="row-sm">
                       <div class="section-title register-text">
                           <div class="section-title">
                               <h4>Search Food Database</h4>
                           </div>
-                          <form action="#" class="register-form">
-                              <div class="row">
+                          <!-- <form action="/nutrition" class="register-form"> -->
+                              <div class="row register-form">
                                   <!-- <div class="col-8">
                                       <label for="name">Food</label>
                                       <input type="text">
@@ -41,14 +41,15 @@
                                   <!-- </div> -->
                                   <div class="col">
                                     <label for="name">Food</label>
-                                    <input type="text" placeholder="Search for Food" onchange="optionChanged(this.value)">
+                                    <input class="form-control" id="foodsearch" type="text" placeholder="Search for Food">
+                                    <!-- <input type="text" placeholder="Search for Food" onchange="optionChanged(this.value)"> -->
                                   </div>
                                   <!-- <div class="col-2">
                                       <label for="name">Servings</label>
                                       <input type="number" min="0" max="20" placeholder="How much?">
                                     </div> -->
                                       </div>
-                                      <button type="submit" class="register-btn">Search</button>
+                                      <button id="search-btn"  class="btn btn-primary">Search</button>
                                     </br></br>
                                   <div class="block">
                                     <div class="col">
@@ -56,7 +57,14 @@
                                       <div class="col-2">
                                       </div>
                                       <textarea class="form-control" rows="5" id="comment"></textarea>
-                                       
+                                      <!-- PK: Code to add table -->
+                                      <div class="col-md-10">
+                                        <div id="table-area" class="">
+                                          
+                                        </div>
+                                      </div>  
+                                      <!-- PK: Code to add table -->
+
                                      <script type="text/javascript">
 
                                       // $(document).on('click', 'ul#matching li', function(e) {
@@ -71,46 +79,38 @@
                                       <ul id="matching"></ul>
                                     </div>
                                   </div>
-                          </form>
+                          <!-- </form> -->
                       </div>
                   </div>  
                 </div>
               </div>
             </div>
 
-            {% if ('loggedin' not in session) or (session['loggedin'] != True) %}
             
-            <div class="col-md-6">
+            <div class="col-md" id="nutriFacts" style="visibility:hidden">
+
               <div class="register-text">
                 <div class="section-title">
-                    <h2>Login</h2>
-                </div>
-              <form action="/login" class="register-form" method="POST">
-                <div class="row">
-                  <div class="col-lg-12"><H4 style="color:#ff0000">{{msg}}</H4></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6">
-                      <label for="name">User Name</label>
-                      <input type="text" id="username" name="username">
-                    </div>
-                    <div class="col-lg-6">
-                      <label for="name">Password</label>
-                      <input  id="password" name="password" type="password">
-                    </div>
-                    
-                  </div>
-                <button type="submit" class="register-btn">Login</button>
-                
-            </form>
-            </div>
+                    <h4>Nutrition Info</h4>
+
+              </div>
+              <div id="table-area" class="">
+                <table id="food-table" class="table table-striped table-dark">
+                  
+                  <tbody>
+                  </tbody>
+                </table>
+              </div>
 
             </div>
-            {% endif %} 
+            
         </div>
     </div>
   </section>
  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
-  <script src="{{ url_for('static', filename='js/user_metric.js') }}"></script>
+  <!-- <script src="{{ url_for('static', filename='js/user_metric.js') }}"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script> -->
+  <script src="static/js/data.js"></script>
+  <script src="static/js/app_search.js"></script>
   {% endblock %}
