fixing dashboard refresh issue

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,6 +26,7 @@
                     </thead>
               
                     <tbody>
+                    <!-- Code -->
                     <tr>
                         <th scope="row">Daily Goals </th>
                             <td>{{daily_goal_list[0]}} </td>
@@ -45,12 +46,12 @@
                         <td> {{ results[3] }} </td>
                         <td> {{ results[4] }} </td>
                         <td> {{ results[5] }} </td> 
-                  
+                    
                     </tr>        
                                 
                     <tr>
                         <th scope="row">Remaining</th>
-              
+                    
                             <td> {{ daily_goal_list[0] - results[0] }} </td>
                             <td>50</td>
                             <td>30</td>
