Add code to display last 5 entries on dashoard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -52,12 +52,18 @@
                     <tr>
                         <th scope="row">Remaining</th>
                     
-                            <td> {{ daily_goal_list[0] - results[0] }} </td>
-                            <td>50</td>
-                            <td>30</td>
-                            <td>20</td>
-                            <td>2,300</td>
-                            <td>45</td> -->
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>
+                            <td>-</td>     
+                            <!-- <td> {{ daily_goal_list[0] - results[0] }} </td>
+                            <td>{{ daily_goal_list[1] - results[1] }}</td>
+                            <td>{{ daily_goal_list[2] - results[2] }}</td>
+                            <td>{{ daily_goal_list[3] - results[3] }}</td>
+                            <td>{{ daily_goal_list[4] - results[4] }}</td>
+                            <td>20</td>  -->
                     </tr>
               
                   </tbody>
@@ -127,7 +133,7 @@
                               <th scope="col">Meal Type</th>
                               <th scope="col">Food</th>
                               <th scope="col">Servings</th>
-                              <th scope="col">Calories (kcal)</th>                      
+                              <!-- <th scope="col">Calories (kcal)</th>                       -->
                             </tr>
                         </thead>
                   
@@ -137,22 +143,51 @@
                         <tr>
                   
                           <th scope="row">1</th>
-                              <td>3/28/2020</td>                  
-                              <td>Breakfast</td>
-                              <td>Cereals</td>
-                              <td>1</td>
-                              <td>200</td>
+                              <td>{{ top5_entries_l[0].meal_date}}</td>                  
+                              <td>{{ top5_entries_l[0].type}}</td>
+                              <td>{{ top5_entries_l[0].meal_desc}}</td>
+                              <td>{{ top5_entries_l[0].amount}}</td>
+                              <!-- <td>200</td> -->
                         </tr>
                         <tr>
                   
-                            <th scope="row">2</th>
-                                <td>3/28/2020</td>                  
-                                <td>Breakfast</td>
-                                <td>Milk</td>
-                                <td>1</td>
-                                <td>50</td>
-                          </tr>
+                            <th scope="row">1</th>
+                                <td>{{ top5_entries_l[1].meal_date}}</td>                  
+                                <td>{{ top5_entries_l[1].type}}</td>
+                                <td>{{ top5_entries_l[1].meal_desc}}</td>
+                                <td>{{ top5_entries_l[1].amount}}</td>
+                                <!-- <td>200</td> -->
+                        </tr>
+
+                        <tr>
                   
+                            <th scope="row">1</th>
+                                <td>{{ top5_entries_l[2].meal_date}}</td>                  
+                                <td>{{ top5_entries_l[2].type}}</td>
+                                <td>{{ top5_entries_l[2].meal_desc}}</td>
+                                <td>{{ top5_entries_l[2].amount}}</td>
+                                <!-- <td>200</td> -->
+                        </tr>
+
+                        <tr>
+                  
+                            <th scope="row">1</th>
+                                <td>{{ top5_entries_l[3].meal_date}}</td>                  
+                                <td>{{ top5_entries_l[3].type}}</td>
+                                <td>{{ top5_entries_l[3].meal_desc}}</td>
+                                <td>{{ top5_entries_l[3].amount}}</td>
+                                <!-- <td>20</td> -->
+                        </tr>
+                       
+                        <tr>
+                  
+                            <th scope="row">1</th>
+                                <td>{{ top5_entries_l[4].meal_date}}</td>                  
+                                <td>{{ top5_entries_l[4].type}}</td>
+                                <td>{{ top5_entries_l[4].meal_desc}}</td>
+                                <td>{{ top5_entries_l[4].amount}}</td>
+                                <!-- <td>200</td> -->
+                        </tr>                
     
                       </tbody>
                   
